z_support/css/pauldub.css
/* Typography ---------------------------------------------------------- */

* {
    text-decoration: none;
    outline: none;
}

body {
    background-color: #F4F5F6 ;
    font-family: 'Heebo', sans-serif;
    color: #232323;
    margin: 0;
    padding: 0;
}

h1 {
    font-size: 30px;
    font-weight: 400;
    line-height: 40px;
}

h2 {
    font-size: 16px;
    font-weight: 400;
    margin: 7px 0;
}

p {
    font-size: 17px;
    font-weight: 400;
    line-height: 22px;
}

a {
    color: #232323;
    transition: 0.2s;
}

a:visited {
    color: #232323;
}

a:hover {
    color: #FF5722;
}

.link_inline {
    text-decoration: underline;
    text-decoration-style: dashed;
    text-decoration-color: #FF5722;
    text-decoration-thickness: .035em;
    text-underline-offset: .18em;
}

ul {
    font-size: 17px;
    line-height: 22px;
    margin-top: -8px;
    padding: 0;
    list-style: none;
}

li {
    margin-bottom: 6px;
}

.caption {
    font-size: 14px;
    font-weight: 300;
    letter-spacing: 0.02em;
    color: #777;
}

.type_paraspace {
    margin-top: -4px;
}

.type_light {
    font-weight: 200;
}

.type_semibold {
    font-weight: 500;
}

.type_orange {
    font-size: 75%;
    font-weight: 300;
    color: #FF5722;
}

.type_grey {
    font-size: 85%;
    font-weight: 300;
    letter-spacing: 0.02em;
    color: #777;
}

/* Navigation ---------------------------------------------------------- */

.nav_global {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    font-size: 22px;
    font-weight: 300;
    padding: 20px 0;
}

.nav_left {
    grid-column: 1 / 3;
    text-align: left;
}

.nav_right {
    grid-column: 3 / 5;
    text-align: right;
}

.nav_bottom {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    border-top: 1px dashed #B9B9AB;
    border-bottom: 1px dashed #B9B9AB;
    font-size: 22px;
    font-weight: 300;
    margin: 60px 0 50px;
    padding: 60px 0;
}

/* Structure ----------------------------------------------------------- */

/* GLOBAL ---- */

.content-wrapper {
    display: block;
    max-width: 1600px;
    margin: 0 auto;
    padding: 12px 80px;
}

img .art {
    max-width: 100%;
    height: auto;
}

footer {
    padding: 10px 0 30px;
}

/* HOME ------ */

.container-home {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-column-gap: 5px;
}

.home_intro {
    margin: 16px 0 0;
    padding-right: 50px;
}

.home_thumbnail {
    border-top: 1px dashed #B9B9AB;
    margin-bottom: 27px;
}

.home_thumbnail .art {
    width: 100%;
}

.home_thumbnail:hover a {
    color: #FF5722;
}

/* WORK ------ */

.container-work {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-column-gap: 30px;
    grid-row-gap: 25px;
    border-top: 1px dashed #8F8F76;
    margin-bottom: 45px;
}

.work_title {
    grid-column: 1 / 3;
    padding: 15px 30px 45px 0;
}

.work_desc_left {
    grid-column: 3 / 4;
    padding: 20px 30px 45px 0;
}

.work_desc_right {
    grid-column: 4 / 5;
    padding: 20px 0 45px;
}

.work_4col {
    grid-column: 1 / 5;
}

.work_3col_left {
    grid-column: 1 / 4;
}

.work_3col_right {
    grid-column: 2 / 5;
}

.work_2col_left {
    grid-column: 1 / 3;
}

.work_2col_right {
    grid-column: 3 / 5;
}

.work_col_1 {
    grid-column: 1 / 2;
}

.work_col_2 {
    grid-column: 2 / 3;
}

.work_col_3 {
    grid-column: 3 / 4;
}

.work_col_4 {
    grid-column: 4 / 5;
}

.work_4col .art,
.work_3col_left .art,
.work_3col_right .art,
.work_2col_left .art,
.work_2col_right .art,
.work_col_1 .art,
.work_col_2 .art,
.work_col_3 .art,
.work_col_4 .art {
    width: 100%;
}

/* ABOUT ----- */

.container-about {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-column-gap: 5px;
    border-top: 1px dashed #B9B9AB;
    margin-bottom: 1.5em;
}

.about_intro {
    grid-column: 1 / 3;
    padding: 18px 125px 40px 0;
}

.about_desc_left {
    grid-column: 3 / 4;
    padding: 20px 30px 40px 0;
}

.about_desc_right {
    grid-column: 4 / 5;
    padding: 20px 0 40px;
}

/* Breakpoints --------------------------------------------------------- */

/* HOME ------ */

/* 1300 */
@media screen and (max-width: 1300px) {
h1 {
    font-size: 2.45vw;
    line-height: 3.15vw;
}

.content-wrapper {
    padding: 12px 50px;
}

.container-home {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
}

.home_intro {
    margin: 18px 0 0;
}
}

/* 960 */
@media screen and (max-width: 960px) {
h1 {
    font-size: 3.4vw;
    line-height: 4.35vw;
}

.nav_global {
    font-size: 20px;
}

.content-wrapper {
    padding: 8px 35px;
}

.container-home {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}
}

/* 600 */
@media screen and (max-width: 600px) {
h1 {
    font-size: 5.5vw;
    line-height: 6.8vw;
}

.nav_global {
    font-size: 16px;
    margin-bottom: -15px;
}

.content-wrapper {
    padding: 0 15px;
}

.container-home {
    display: grid;
    grid-template-columns: 1fr;
}

.home_intro {
    margin: 20px 0 25px;
}
}

/* WORK ------ */

/* 960 */
@media screen and (max-width: 960px) {
p {
    font-size: 16px;
    line-height: 21px;
    }

.nav_global {
    font-size: 20px;
}

.container-work {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-row-gap: 0;
}

.work_title {
    grid-column: 1 / 5;
    margin-top: 10px;
    padding: 0;
}

.work_desc_left {
    grid-column: 1 / 3;
    padding: 0 0 25px;
}

.work_desc_right {
    grid-column: 3 / 5;
    padding: 0 0 25px;
}

.work_4col {
    grid-column: 1 / 5;
}

.work_3col_left {
    grid-column: 1 / 4;
}

.work_3col_right {
grid-column: 2 / 5;
}

.work_2col_left {
    grid-column: 1 / 3;
}

.work_2col_right {
    grid-column: 3 / 5;
}

.work_col_1 {
    grid-column: 1 / 2;
}

.work_col_2 {
    grid-column: 2 / 3;
}

.work_col_3 {
    grid-column: 3 / 4;
}

.work_col_4 {
    grid-column: 4 / 5;
}
}

/* 600 */
@media screen and (max-width: 600px) {
.nav_global {
    font-size: 16px;
    margin-bottom: -15px;
}

.nav_bottom {
    font-size: 16px;
    margin: 30px 0;
    padding: 30px 0;
}

.container-work {
    display: grid;
    grid-template-columns: 1fr;
    margin-top: 12px;
}

.work_title {
    grid-column: 1 / 2;
    margin-top: 10px;
}

.work_desc_left {
    grid-column: 1 / 2;
    padding: 0;
}

.work_desc_right {
    grid-column: 1 / 2;
    padding: 0 0 25px;
}

.work_4col {
    grid-column: 1 / 2;
}

.work_3col_left {
    grid-column: 1 / 2;
}

.work_3col_right {
grid-column: 1 / 2;
}

.work_2col_left {
    grid-column: 1 / 2;
}

.work_2col_right {
    grid-column: 1 / 2;
}

.work_col_1 {
    grid-column: 1 / 2;
}

.work_col_2 {
    grid-column: 1 / 2;
}

.work_col_3 {
    grid-column: 1 / 2;
}

.work_col_4 {
    grid-column: 1 / 2;
}
}

/* ABOUT ----- */

/* 960 */
@media screen and (max-width: 960px) {
    .container-about {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }

    .about_intro {
        grid-column: 1 / 3;
        padding: 60px 0 10px;
    }

    .about_desc_left {
        grid-column: 1 / 2;
        padding: 0 30px 30px 0;
    }

    .about_desc_right {
        grid-column: 2 / 3;
        padding: 0 0 30px;
    }
    }

/* 600 */
@media screen and (max-width: 600px) {
    li {
        margin-bottom: 4px;
    }

    .container-about {
        margin-top: 12px;
        padding-top: 5px;
    }

    .about_intro {
        grid-column: 1 / 3;
        padding-top: 0;
    }
    .about_desc_left {
        grid-column: 1 / 3;
        padding: 0;
    }

    .about_desc_right {
        grid-column: 1 / 3;
        padding: 0;
    }
    }

